--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       
       - name: Use Node.js 20.x
-      - uses : actions/setup-node@v3.8.1
+        uses : actions/setup-node@v3.8.1
         with:
           node-version: 20.x
 
