--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,6 +1,6 @@
 name: Build and Deploy to Netlify
 on:
-  push: 
+  push:
     branches: [main]
   pull_request:
     branches: [main]
@@ -10,9 +10,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      
+
       - name: Use Node.js 20.x
-        uses : actions/setup-node@v3.8.1
+        uses: actions/setup-node@v3.8.1
         with:
           node-version: 20.x
 
@@ -30,7 +30,7 @@ jobs:
           publish-dir: 'dist'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
+          deploy-message: 'Deploy from GitHub Actions'
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
