--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,4 +37,5 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          VITE_WIP_FLAG: ${{ secrets.VITE_WIP_FLAG }}
         timeout-minutes: 1
