--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -25,17 +25,8 @@ jobs:
           yarn build
 
       - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v2.0
-        with:
-          publish-dir: './dist'
-          production-branch: main
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: 'Deploy from GitHub Actions'
-          enable-pull-request-comment: false
-          enable-commit-comment: true
-          overwrites-pull-request-comment: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          VITE_WIP_FLAG: ${{ secrets.VITE_WIP_FLAG }}
+        run: netlify deploy --dir=public --prod
         timeout-minutes: 1
