--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,5 +28,5 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        run: netlify deploy --dir=public --prod
+        run: netlify deploy --dir=dist --prod
         timeout-minutes: 1
