--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,10 @@
     "react-refresh/only-export-components": [
       "warn",
       { "allowConstantExport": true }
+    ],
+    "@typescript-eslint/no-confusing-void-expression": [
+      "error",
+      { "ignoreArrowShorthand": true }
     ]
   }
 }
